Update Validation Responses on Clear

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,6 @@
 	"description": "Create Interactive Exercises right inside your Obsidian Notes.",
 	"author": "Alex C. Cavaco",
 	"authorUrl": "https://alexccavaco.com",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"fundingUrl": "https://ko-fi.com/alexccavaco",
 	"isDesktopOnly": false
 }
