--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
+		"@types/parsimmon": "^1.10.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
+		"auto-plugin-obsidian": "^0.1.6",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
+		"npm-watch": "^0.11.0",
 		"obsidian": "latest",
-		"tslib": "2.4.0",
-		"typescript": "4.7.4",
-		"@types/parsimmon": "^1.10.6",
-		"auto-plugin-obsidian": "^0.1.6",
 		"parsimmon": "^1.18.1",
-		"npm-watch": "^0.11.0"
+		"tslib": "2.4.0",
+		"typescript": "4.7.4"
 	}
 }
