Update Version and Shorten Author Name

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
 	"id": "exercises",
 	"name": "Exercises",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"minAppVersion": "0.15.0",
 	"description": "Create Interactive Exercises along side your Obsidian Notes",
-	"author": "Alex C. Cavaco",
+	"author": "AlexCCavaco",
 	"authorUrl": "https://alexccavaco.com",
 	"fundingUrl": "https://ko-fi.com/alexccavaco",
 	"isDesktopOnly": false
